      my @labels = $binner->labels;
   The required data can also be fed directly to labels() if desired:
      my @labels = $binner->labels( x => $x );
   (Edward Baudrez)
 - process_axes() has been removed; you should use autoscale() now (see below)
   (Edward Baudrez)
 - support for DEFAULT_ACTION has been dropped; it is now required to specify
   an action for every variable (Edward Baudrez)

 [New features]
 - in addition to 'step', 'min', and 'n', new() now also accepts 'max' and
   'round' in axis specifications (Edward Baudrez)
 - added a method feed() to feed data piecewise (or all at once) before calling
   process(); this can be very useful when data is being read from a file. It
   essentially separates the data feeding from the processing step (both were
   done at the same time before, in the call to process()). This also means you
   can now call process() without arguments, provided that you have already fed
   all required data before. (Edward Baudrez)
 - added a method autoscale() to have missing axis specifications derived
   automatically from the data. As a side effect, it is now allowed to call the
   constructor with too few or even without any axis specifications:
      my $binner = PDL::NDBin->new( axes => [ [ x => ( n => 10 ) ],
                                              [ 'y' ] ] );
      $binner->process( x => $x, y => $y );
   This used to raise an error in previous versions. (Edward Baudrez)

0.003 2012-08-10

 - never released on CPAN
 - PDL::NDBin now supports concatenation of calls: very useful to process
   multiple input files. You need use the object-oriented interface to do this.
   (Edward Baudrez)
 - API change for action coderefs: the first (and only) argument is now an
   iterator instead of a piddle containing the selected data. This means that
   where coderefs looked like this in the previous version:
      sub { my $pdl = shift; return $pdl->avg }
   you now have to write: